my-app/k8s/policy/database-isolation-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-isolation-policy
  namespace: database-ns
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: backend-ns
        - podSelector:
            matchLabels:
              role: backend # Only backend pods can access MySQL
