my-app/k8s/policy/proxy-to-frontend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: proxy-to-frontend-policy
  namespace: frontend-ns
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: proxy-ns
        - podSelector:
            matchLabels:
              app: proxy
      ports:
        - protocol: TCP
          port: 8081 # Frontend service port
